--- a/src/index.css
+++ b/src/index.css
@@ -82,3 +82,19 @@ body{
     grid-template: 1fr 1fr 1fr 1fr / 1fr 1fr 1fr 1fr;
     gap: 15px;
 }
+
+/* responsividade */
+
+@media (max-width: 520px) {
+    .card{
+        width: 80px;
+        height: 90px;
+    }
+    .icon{
+        width: 70px;
+        height: 80px;
+    }
+    .card_tras{
+        font-size: 20px
+    }
+}
